# ark-feanor

./: .gitignore  .gitmodules  BENCHMARK_GUIDE.md  BENCH_INSTRUCTIONS.md  Cargo.toml  README.md  calculate_optimal_mult_table.py  compare_benchmarks.sh
.beads/: beads.base.meta.json  beads.left.jsonl  beads.left.meta.json  issues.jsonl
.cargo/: config.toml
.github/workflows/: publish.yml
benches/: buchberger_baseline.rs  buchberger_tiny.rs  buchberger_tiny_avx512.rs  comparison.rs  f4_avx512.rs  f4_tiny.rs  f4_tiny_avx512.rs  field_ops.rs  field_ops_avx512.rs
examples/: compare_f4_buchberger.rs  f4_scaling_test.rs  f4_simple_test.rs  gb_system_test.rs  gen_uint16.rs  polynomial_system.rs  simple_groebner.rs  uint16_system.json  uint4_system.json
src/: common_fields.rs  conversions.rs  field_wrapper.rs  homomorphisms.rs  lib.rs  prime_field.rs
src/f4/: gaussian.rs  matrix.rs  mod.rs  monosig.rs
tests/: basic_arithmetic.rs  groebner_basis.rs  phase2_features.rs  polynomial_rings.rs
