[package]
name = "ark-feanor"
version = "0.5.0"
edition = "2021"
resolver = "2"
authors = ["Vitor Py <vitor@vitorpy.com>"]
license = "MIT OR Apache-2.0"
description = "Bridge between arkworks finite fields and feanor-math ring system"
repository = "https://github.com/vitorpy/ark-feanor"
keywords = ["cryptography", "finite-fields", "polynomial", "groebner-basis", "arkworks"]
categories = ["cryptography", "mathematics"]

[dependencies]
# Using upstream ark-algebra
ark-ff = { version = "0.4", default-features = false, features = ["std"] }
ark-ec = { version = "0.4", default-features = false, features = ["std"] }
ark-serialize = { version = "0.4", default-features = false, features = ["std"] }
ark-bn254 = { version = "0.4", default-features = false, features = ["std", "curve", "scalar_field"] }
ark-bls12-381 = { version = "0.4", default-features = false, features = ["std", "curve", "scalar_field"] }
ark-std = { version = "0.4", default-features = false, features = ["std"] }

# Existing dependencies
feanor-math = { path = "vendor/feanor-math", features = ["unstable-enable"] }
num-bigint = "0.4"
num-traits = "0.2"
lazy_static = "1.4"

[dev-dependencies]
criterion = "0.5"
ark-test-curves = { version = "0.4", default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[features]
default = ["std"]
std = ["ark-ff/std", "ark-ec/std", "ark-serialize/std", "ark-bn254/std", "ark-bls12-381/std", "ark-std/std"]

[[bench]]
name = "comparison"
harness = false

[[bench]]
name = "buchberger_baseline"
harness = false

# Microbenchmarks: Field operations
[[bench]]
name = "field_ops"
harness = false

# Tiny problem benchmarks: Buchberger
[[bench]]
name = "buchberger_tiny"
harness = false

# Tiny problem benchmarks: F4
[[bench]]
name = "f4_tiny"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
debug = true

[patch.crates-io]
feanor-math = { path = "vendor/feanor-math" }
